--- a/GlobalGamesCET49/Views/Shared/_Layout.cshtml
+++ b/GlobalGamesCET49/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li id="home"><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li id="about"><a asp-controller="Home" asp-action="About">About</a></li>
                     <li id="services"><a asp-controller="Home" asp-action="Services">Services</a></li>
+                    <li id="contacts"><a asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +42,7 @@
     @RenderBody()
 
     <footer>
-        <p>Global GamesCET49, Copyright &copy; @DateTime.Now.Year</p>
+        <p>GlobalGamesCET49, Copyright &copy; @DateTime.Now.Year</p>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.js"></script>
