--- a/GlobalGamesCET49/wwwroot/css/site.css
+++ b/GlobalGamesCET49/wwwroot/css/site.css
@@ -226,4 +226,14 @@ table, th, td, .table {
         margin-bottom: 5px;
     }
 
+    table, th, td, .table {
+        border: 5px solid black;
+        width: 90%;
+        text-align: center;
+    }
+
+    .text-danger, .control-label {
+        padding: 5px;
+    }
+
 }
