--- a/GlobalGamesCET49/Views/Contacts/Create.cshtml
+++ b/GlobalGamesCET49/Views/Contacts/Create.cshtml
@@ -10,6 +10,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        @*
+            // Consultar Razor-pages https://docs.microsoft.com/en-us/aspnet/core/tutorials/razor-pages/page?view=aspnetcore-2.1&tabs=visual-studio
+        *@
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
