--- a/GlobalGamesCET49/Views/Shared/_Layout.cshtml
+++ b/GlobalGamesCET49/Views/Shared/_Layout.cshtml
@@ -6,8 +6,18 @@
     <meta name="Description" content="desenvolvimento de jogos e realidade virtual">
     <meta name="Keywords" content="realidade virtual, criamos jogos, desenvolvemos jogos">
     <title>GlobalGamesCET49 | @ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    @*
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
+    *@
+
+    <environment include="Development">
+        <link rel="stylesheet" href="~/css/site.css" />
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+    </environment>
+
 </head>
 
 
@@ -23,7 +33,10 @@
                     <li id="home"><a asp-controller="Home" asp-action="Index">Home</a></li>
                     <li id="about"><a asp-controller="Home" asp-action="About">About</a></li>
                     <li id="services"><a asp-controller="Home" asp-action="Services">Services</a></li>
-                    <li id="contacts"><a asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a></li>
+                    @*
+                        Suspenção da visualização de contacts da barra menu 
+                        <li id="contacts"><a asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a></li>
+                    *@
                 </ul>
             </nav>
         </div>
@@ -45,9 +58,33 @@
         <p>GlobalGamesCET49, Copyright &copy; @DateTime.Now.Year</p>
     </footer>
 
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    @*
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+    *@
+
+    <environment include="Development">
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/js/site.js" asp-append-version="true"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
+                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                asp-fallback-test="window.jQuery"
+                crossorigin="anonymous"
+                integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+                crossorigin="anonymous"
+                integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
+        </script>
+        <script src="~/js/site.min.js" asp-append-version="true"></script>
+    </environment>
+
     @RenderSection("Scripts", required: false)
 
 
